# BSU_MasterDegree

Algorithms1/: .clang-tidy  CMakeLists.txt  readme.md
Algorithms1/00_hello_world/: CMakeLists.txt
Algorithms1/00_hello_world/bad_max_int/: CMakeLists.txt  main.cpp
Algorithms1/00_hello_world/hello_world/: CMakeLists.txt  main.cpp
Algorithms1/01_A_longest_subsequence/: A.cpp  B.cpp  CMakeLists.txt  main.cpp  test.cpp
Algorithms1/01_B_bracket_sequence/: CMakeLists.txt  main.cpp
Algorithms1/01_E_sliding_window_max/: CMakeLists.txt  main.cpp
Algorithms1/02_A_three_sequences/: CMakeLists.txt  main.cpp
Algorithms1/02_B_football_team/: CMakeLists.txt  main.cpp  sort.cpp
Algorithms1/02_C_merge_sorted_sequences/: CMakeLists.txt  main.cpp
Algorithms1/02_D_one_dimensional_postman/: CMakeLists.txt  binary_heap.cpp  main.cpp
Algorithms1/03_A_fixed_set/: CMakeLists.txt  fixed_set.h  main.cpp
Algorithms1/03_C_memory_manager/: CMakeLists.txt  gen1.cpp  main.cpp
Algorithms1/04_A_search_trees_number/: CMakeLists.txt  main.cpp
Algorithms1/05_B_post_robot/: CMakeLists.txt  main.cpp
Algorithms1/05_C_min_road_cost/: CMakeLists.txt  main.cpp  test.cpp
Algorithms1/06_D_magic/: CMakeLists.txt  main.cpp
Algorithms1/06_E_segments_union_len/: CMakeLists.txt  main.cpp  tests.txt
Algorithms2/: .clang-format  .gitignore  CMakeLists.txt
Algorithms2/00_A_hello_world/: CMakeLists.txt  main.cpp
Algorithms2/00_B_sum/: CMakeLists.txt  main.cpp  test.cpp
Algorithms2/01_A_prefix_function/: CMakeLists.txt  main.cpp  test.cpp
Algorithms2/01_B_z_function/: CMakeLists.txt  main.cpp  test.cpp
Algorithms2/01_C_inaccurate_match/: CMakeLists.txt  main.cpp  test.cpp
Algorithms2/01_D_max_repeating_sequence/: CMakeLists.txt  main.cpp  test.cpp
Algorithms2/02_A_aho_corasick/: CMakeLists.txt  main.cpp  test.cpp
Algorithms2/02_A_aho_corasick_3/: CMakeLists.txt  fuzzy_matching.h  main_rioCFSI.cpp  test.cpp
Algorithms2/02_B_banned_strings/: CMakeLists.txt  main.cpp  test.cpp
Algorithms2/02_C_lz77/: CMakeLists.txt  main.cpp  test.cpp
Algorithms2/02_D_bwt/: CMakeLists.txt  main.cpp  test.cpp
Algorithms2/02_E_number_substrings/: CMakeLists.txt  main.cpp  test.cpp
Algorithms2/03_A_fuzzy_dictionary/: CMakeLists.txt  main.cpp  test.cpp
Algorithms2/03_B_min_hamming_distance/: CMakeLists.txt  main.cpp
Algorithms2/03_C_nenokku/: CMakeLists.txt  main.cpp
Algorithms2/03_D_close_relatives/: CMakeLists.txt  main.cpp  test.cpp
Algorithms2/04_A_simple_max_flow/: CMakeLists.txt  main.cpp
Algorithms2/04_B_relocation/: CMakeLists.txt  main.cpp
Algorithms2/04_C_basketball/: CMakeLists.txt  main.cpp  test.cpp
Algorithms2/05_B_equivalence/: CMakeLists.txt  main.cpp
Algorithms2/05_D_archieve/: CMakeLists.txt  main.cpp
Algorithms2/test/: test_runner.h
ComputerVision/BayerFilter/: bayer.py
ComputerVision/ContentAwareImageResizing/: Untitled.ipynb  gui.config  gui.py  gui_old.py  run.py  seam_carve.py
ComputerVision/FacePointsDetection/: detection.ipynb  detection.py
ComputerVision/FineTuningClassification/: classification.ipynb  classification.py
ComputerVision/ImageAlignmentProcudinGorskii/: align.py  run.py  try0.ipynb
ComputerVision/InverseFilteringImageRestoration/: deconvolution.py
ComputerVision/JpegImplementation/: Untitled.ipynb  image_compression.py
ComputerVision/NeuralNetworkNumpy/: common.py  interface.py  run.py  solution.py
ComputerVision/PanoramaStiching/: main.py  panorama.py
ComputerVision/SemanticSegmentation/: Segmentation.ipynb  run.py
GenerativeModels/hw1/: hw_ae_fid.ipynb
GenerativeModels/hw2/: StarGAN_public.ipynb
GenerativeModels/seminar-3-gans/: fgan.ipynb
HighPerfomanceCpp/: links.txt
HighPerfomanceCpp/hw1/: commands.txt  main.cpp  notes.txt
HighPerfomanceCpp/hw2/: analysis.txt  commands.txt  generate_test.py  problem.txt  solution01.cpp
HighPerfomanceCpp/hw3/: main.cpp  notes.txt
MachineLearning1/01-intro/: Seminar01_will_be_updated.ipynb
MachineLearning1/02-intro/: Seminar02.ipynb
MachineLearning1/03-knn/: Seminar03Distance.ipynb
MachineLearning1/05-pytorch/: Seminar04.ipynb
MachineLearning1/06-trees/: SeminarDecisionTreePart1.ipynb  SeminarMetrics.ipynb
MachineLearning1/07/: Seminar06-07.ipynb  Seminar7Busting.ipynb
MachineLearning1/08/: Seminar08X.ipynb
MachineLearning1/09-boost/: Seminar9.ipynb
MachineLearning1/10-dim/: SeminarML08.ipynb
MachineLearning1/hw1-intro/: lab_1_pere.ipynb
MachineLearning1/hw2-trees/: lab_2_dt_rf_gbdt.ipynb
MachineLearning1/hw3-probs/: ExtraLabOnline.ipynb
MachineLearning2/01-pytorch/: machine_learning_2_seminar_180222.ipynb
MachineLearning2/02-RNN/: seminar_3.ipynb
MachineLearning2/03-DL-tricks/: sem3_dl_tricks_student.ipynb
MachineLearning2/04-CNN/: machine_learning_2_seminar_210322_rKaohk4.ipynb
MachineLearning2/07-recsys/: recommender_systems_intro_2022.ipynb
Multiprocessing/: .gitignore  run.sh
Multiprocessing/ex/2a/: CMakeLists.txt  main.cpp
Multiprocessing/ex/2b/: CMakeLists.txt  main.cpp
NaturalLanguageProcessing/01_embeddings/: seminar.ipynb
NaturalLanguageProcessing/02_classification/: homework_part1.ipynb  homework_part2.ipynb  seminar.ipynb
NaturalLanguageProcessing/03_language_models/: seminar.ipynb
NaturalLanguageProcessing/04_seq2seq/: practice_and_homework_pytorch.ipynb
ProbabilisticAlgorithms/carmichael_number/: main.cpp
ProbabilisticAlgorithms/incorrect_element/: main.cpp
ProbabilisticAlgorithms/matrix_multiplication/: main.cpp
ProbabilisticAlgorithms/perfect_matching/: main.cpp
ProbabilisticAlgorithms/prime_check/: main.cpp
ProbabilisticAlgorithms/primitive_root/: main.cpp
ProbabilisticAlgorithms/unique_users/: main.cpp
QtGeometricModelling/: notes.txt
QtGeometricModelling/predicates/: Predicates.cpp
RecommenderSystems/hw1_item2item_als/: HW_1_music_check.ipynb
RecommenderSystems/hw2_nn_boost/: HW_2_Dzen_check.ipynb
Statistics/HW1/: HW1.ipynb  (+3 more)
TextAlgorithms/: 01. number_of_different_substrings.cpp  02. three_occurancies.cpp  03. period.cpp  04. shift.cpp  05. pi_to_z.cpp  06. z_to_pi.cpp  z_function.cpp
(+123 files in other folders)
